Pues ahora fallamos en menos cosas, eso esta bien