@@ -2,6 +2,7 @@ package cc.qp;
 
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.Map;
 
 import es.upm.babel.cclib.*;
@@ -9,7 +10,7 @@ import es.upm.babel.cclib.*;
 public class QuePasaMonitor implements QuePasa {
 	private Map<String, ArrayList<Integer>> miembros = new HashMap<String, ArrayList<Integer>>();
 	private Map<String, Integer> creador = new HashMap<String, Integer>();
-	private Map<Integer, ArrayList<Mensaje>> mensaje = new HashMap<Integer, ArrayList<Mensaje>>();
+	private Map<Integer, LinkedList<Mensaje>> mensaje = new HashMap<Integer, LinkedList<Mensaje>>();
 	private Monitor mutex;
 	private Monitor.Cond hay_mensaje;
 	private Monitor.Cond todos_mensajes;
@@ -18,7 +19,6 @@ public class QuePasaMonitor implements QuePasa {
 		hay_mensaje = mutex.newCond();
 		todos_mensajes = mutex.newCond();
 	}
-
 	@Override
 	public void crearGrupo(int creadorUid, String grupo) throws PreconditionFailedException {
 		mutex.enter();
@@ -31,7 +31,7 @@ public class QuePasaMonitor implements QuePasa {
 		miembros_lista.add(creadorUid);
 		miembros.put(grupo, miembros_lista);
 		if(mensaje.get(creadorUid)==null) {
-			ArrayList<Mensaje> nuevo=new ArrayList<Mensaje>();
+			LinkedList<Mensaje> nuevo=new LinkedList<Mensaje>();
 			mensaje.put(creadorUid,nuevo);
 		}
 		mutex.leave();
@@ -49,11 +49,10 @@ public class QuePasaMonitor implements QuePasa {
 		listaActualizada.add(nuevoMiembroUid);
 		miembros.remove(grupo);
 		miembros.put(grupo, listaActualizada);
-		ArrayList<Mensaje> nuevo=new ArrayList<Mensaje>();
+		LinkedList<Mensaje> nuevo=new LinkedList<Mensaje>();
 		mensaje.put(nuevoMiembroUid,nuevo);
 		mutex.leave();
 	}
-
 	@Override
 	public void salirGrupo(int miembroUid, String grupo) throws PreconditionFailedException {
 		mutex.enter();
@@ -61,7 +60,8 @@ public class QuePasaMonitor implements QuePasa {
 			mutex.leave();
 			throw new PreconditionFailedException();
 		}
-		ArrayList<Mensaje> borrados=mensaje.get(miembroUid);
+		if (miembroUid != 0){miembroUid--;} 
+		LinkedList<Mensaje> borrados=mensaje.get(miembroUid);
 		for(int i=0;i<borrados.size();i++) {
 			if(borrados.get(i).getGrupo().equals(grupo)) {
 				borrados.remove(i);
@@ -79,7 +79,7 @@ public class QuePasaMonitor implements QuePasa {
 	@Override
 	public void mandarMensaje(int remitenteUid, String grupo, Object contenidos) throws PreconditionFailedException {
 		mutex.enter();
-		if (!miembros.get(grupo).contains(remitenteUid)) {
+		if (miembros.get(grupo) == null && !miembros.get(grupo).contains(remitenteUid)) {
 			mutex.leave();
 			throw new PreconditionFailedException();
 		}
@@ -87,12 +87,11 @@ public class QuePasaMonitor implements QuePasa {
 		ArrayList<Integer> n_miembros = miembros.get(grupo);
 		Mensaje msge = new Mensaje(remitenteUid, grupo, contenidos);
 		for (int i = 0; i < n_miembros.size(); i++) {
-			ArrayList<Mensaje> aux = mensaje.get(n_miembros.get(i));
-			aux.add(msge);
+			LinkedList<Mensaje> aux = mensaje.get(n_miembros.get(i));
+			aux.addLast(msge);
 			mensaje.put(n_miembros.get(i), aux);
 			hay_mensaje.signal();
 		}
-		this.todos_mensajes.signal();
 		mutex.leave();
 	}
 
@@ -100,13 +99,11 @@ public class QuePasaMonitor implements QuePasa {
 	public Mensaje leer(int uid) {
 		mutex.enter();
 		while (mensaje.get(uid)==null||mensaje.get(uid).isEmpty()){
-			this.todos_mensajes.await();
 			hay_mensaje.await();
 		}
-		//System.out.println(true);
-		ArrayList<Mensaje> aux = mensaje.get(uid);
-		Mensaje msge = aux.get(0);
-		aux.remove(0);
+		LinkedList<Mensaje> aux = mensaje.get(uid);
+		Mensaje msge = aux.getLast();
+		aux.removeLast();
 		mensaje.remove(uid);
 		mensaje.put(uid,aux);
 		mutex.leave();
